day and night with adjustable day time added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://velbharathi.github.io/Portfolio",
   "dependencies": {
+    "classnames": "^2.2.6",
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2"
